# Harmonia-App

./: .gitignore  .gitmodules  ADSRComponent_8cpp.html  ADSRComponent_8cpp__incl.map  ADSRComponent_8cpp__incl.md5  ADSRComponent_8h.html  ADSRComponent_8h.js  ADSRComponent_8h__dep__incl.map  ADSRComponent_8h__dep__incl.md5  ADSRComponent_8h__incl.map  ADSRComponent_8h__incl.md5  ADSRComponent_8h_source.html  Alert_8h.html  Alert_8h.js  Alert_8h__dep__incl.map  Alert_8h__dep__incl.md5  Alert_8h__incl.map  Alert_8h__incl.md5  Alert_8h_source.html  AppColourIds_8h.html  AppColourIds_8h__dep__incl.map  AppColourIds_8h__dep__incl.md5  AppColourIds_8h__incl.map  AppColourIds_8h__incl.md5  AppColourIds_8h_source.html  AppConfig_8h.html  AppConfig_8h.js  AppConfig_8h__dep__incl.map  AppConfig_8h__dep__incl.md5  AppConfig_8h_source.html  AppController_8cpp.html  AppController_8cpp__incl.map  AppController_8cpp__incl.md5  AppController_8h.html  AppController_8h.js  AppController_8h__dep__incl.map  AppController_8h__dep__incl.md5  AppController_8h__incl.map  AppController_8h__incl.md5  AppController_8h_source.html  (+1167 more)
.github/workflows/: check-and-release.yml  deploy-vps.yml  doxygen.yml  push-to-target.yml  release-vps.yml  release.yml  test-standalone.yml
saved/app/: StandaloneApp.cpp  StandaloneAppWrapper.cpp  StandaloneAppWrapper.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+90 more)
src/: AIManager.cpp  AIManager.h  AppController.cpp  AppController.h  BackendAuthManager.cpp  BackendAuthManager.h  CustomLookAndFeel.h  DataModel.h  FrequencySlider.h  GenerateButton.h  HarmoniaApp.cpp  HarmoniaApp.h  HarmoniaParams.h  Info.plist  JuceHeader.h  LayoutManager.cpp  LayoutManager.h  MainComponent.cpp  MainComponent.h  MainComponent_Audio.cpp  MainComponent_Init.cpp  MainComponent_Layout.cpp  MainComponent_Params.cpp  MainWindow.cpp  MainWindow.h  PatchController.cpp  PatchController.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SupabaseManager.cpp  SupabaseManager.h  ThemeManager.cpp  ThemeManager.h  VolumeSlider.h  WaveformSelector.h  main.cpp
src/app/: StandaloneApp.cpp  StandaloneApp.h  StandaloneWindow.cpp  StandaloneWindow.h  main.cpp
src/backendManagement/: BackendAiManager.cpp  BackendAiManager.h  BackendAuthManager.cpp  BackendAuthManager.h  BackendManager.cpp  BackendManager.h  BackendProfileManager.cpp  BackendProfileManager.h  BackendTypes.h  backendAiManager.cpp  backendAiManager.h
src/components/: ADSRComponent.cpp  ADSRComponent.h  BottomBarComponent.cpp  BottomBarComponent.h  ComboControl.h  ComponentsIncludes.h  DisplayScreen.h  EnvelopeVisualizer.h  FilterComponent.cpp  FilterComponent.h  FrequencyVolumeComponent.cpp  FrequencyVolumeComponent.h  IconChoiceSelector.h  IconRenderer.h  KnobControl.h  LfoVisualizer.h  LoginPage.cpp  LoginPage.h  OscilloscopeComponent.cpp  OscilloscopeComponent.h  ParticleField.h  SectionPanel.h  SignupPage.cpp  SignupPage.h  Synth.cpp  Synth.h  SynthComponent.cpp  SynthComponent.h  TitleComponent.cpp  TitleComponent.h  TopBarComponent.cpp  TopBarComponent.h  WaveformSelector.h  WelcomePage.cpp  WelcomePage.h
src/config/: AppConfig.h  AudioConfig.h  String.h  UIStyle.h  config.json
src/pages/: AuthPageLookAndFeel.h  LoginPage.cpp  LoginPage.h  PagesIncludes.h  SignupPage.cpp  SignupPage.h  WelcomePage.cpp  WelcomePage.h
src/parameters/: HarmoniaParameters.h  HarmoniaParams.h
src/plugin/: JucePluginHeader.h  PluginAppWrapper.cpp  PluginAppWrapper.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/sections/: HeaderComponent.cpp  HeaderComponent.h
src/shared/: AppCore.cpp  AppCore.h  HarmoniaApp.cpp  HarmoniaApp.h  JuceHeader.h  MainComponent.cpp  MainComponent.h  MainComponent_AI.cpp  MainComponent_Audio.cpp  MainComponent_Init.cpp  MainComponent_Layout.cpp  MainComponent_Params.cpp  MainComponent_Theme.cpp  MainWindow.h  PluginAppWrapper.cpp  PluginAppWrapper.h
src/shared/backendManagement/: BackendAiManager.cpp  BackendAiManager.h  BackendAuthManager.cpp  BackendAuthManager.h  BackendManager.cpp  BackendManager.h  BackendProfileManager.cpp  BackendTypes.h
src/shared/components/: ADSRComponent.cpp  ADSRComponent.h  BottomBarComponent.cpp  ComponentsIncludes.h  FilterComponent.cpp  FilterComponent.h  FrequencySlider.h  FrequencyVolumeComponent.cpp  FrequencyVolumeComponent.h  OscilloscopeComponent.h  Synth.cpp  Synth.h  SynthComponent.cpp  SynthComponent.h  TitleComponent.cpp  TitleComponent.h  TopBarComponent.cpp  TopBarComponent.h  VolumeSlider.h  WaveformSelector.h
src/shared/models/: DataModel.h
src/shared/pages/: LoginPage.cpp  LoginPage.h  PagesIncludes.h  SignupPage.cpp  SignupPage.h  WelcomePage.cpp  WelcomePage.h
src/shared/parameters/: HarmoniaParams.h
src/shared/themes/: AppColourIds.h  AppLookAndFeel.h  Themes.h
src/shared/tools/: PatchSerializer.h  ThemeAndLayoutConverter.h
src/themes/: AppColourIds.h  AppLookAndFeel.h  HarmoniaPalette.h  HiveLookAndFeel.h  PaletteSelector.h
src/tools/: Alert.h  PatchSerializer.h  PresetLoader.h
